--- a/views/shop/product-list.ejs
+++ b/views/shop/product-list.ejs
@@ -1,9 +1,9 @@
-<%- include('includes/head.ejs') %>
+<%- include('../includes/head.ejs') %>
 <link rel="stylesheet" href="/css/product.css" />
   </head>
 
   <body>
-    <%- include('includes/navigation.ejs') %>
+    <%- include('../includes/navigation.ejs') %>
 
     <main>
       <% if(prods.length > 0) { %>
@@ -16,19 +16,21 @@
           </header>
           <div class="card__image">
             <img
-              src="https://cdn.pixabay.com/photo/2016/03/31/20/51/book-1296045_960_720.png"
+              src="<%= product.imageUrl%>"
               alt="A Book"
             />
           </div>
           <div class="card__content">
-            <h2 class="product__price">$19.99</h2>
+            <h2 class="product__price">$<%= product.price %></h2>
             <p class="product__description">
-              A very interesting book about so many even more interesting
-              things!
+              <%= product.description %>
             </p>
           </div>
           <div class="card__actions">
-            <button class="btn">Add to Cart</button>
+            <form action="/add-to-cart" method="POST">
+              <button type="submit" class="btn">Add to Cart</button>
+            </form>
+            
           </div>
         </article>
         <% }) %>
@@ -37,4 +39,4 @@
       <h1>No Products Found!</h1>
       <% } %>
     </main>
-<%- include('includes/end.ejs')%>
+<%- include('../includes/end.ejs')%>
