--- a/views/shop/product-detail.ejs
+++ b/views/shop/product-detail.ejs
@@ -9,8 +9,6 @@
         <img src="<%= product.imageUrl%>" alt="<%= product.title%>"/>
         <h2>$<%= product.price%></h2>
         <p><%= product.description%></p>
-        <form action="/cart" method="POST">
-            <button class="btn">Add to Cart</button>
-        </form>
+        <%- include('../includes/add-to-cart.ejs') %>
     </main>
 <%- include('../includes/end.ejs')%>
