--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -8,6 +8,10 @@
         <ul>
           <% products.forEach(product=>{%>
           <li><%= product.productData.title%>(<%= product.qty%>)</li>
+          <form action="/cart-delete-item" method="POST">
+            <input type="hidden" name="productId" value="<%= product.productData.id%>"/>
+            <button class="btn" type="submit">Delete</button>
+          </form>
           <% })%>
         </ul>
       <% } else {%>
