--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -25,7 +25,7 @@
           <textarea type="text" name="description" id="description" rows="5" ><% if(editing) {%><%= product.description%><%}%></textarea>
         </div>
         <% if(editing) {  %>
-          <input type="hidden" name="productId" value="<%= product.id %>" />
+          <input type="hidden" name="productId" value="<%= product._id %>" />
         <% } %>
         <button type="submit"><% if (editing) { %>Updating Product<%} else {%>Add Product<%}%></button>
       </form>
