--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -11,9 +11,9 @@
             <li>
               <h1># <%= order._id%></h1>
               <ul>
-                <% order.items.forEach(product =>{%>
+                <% order.products.forEach(product =>{%>
                 
-                <li><%= product.title%>(<%= product.quantity%>)
+                <li><%= product.product.title%>(<%= product.quantity%>)
                 </li>
                 <% })%>
               </ul>
