--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,7 +17,7 @@
           >Orders</a
         >
       </li>
-      <li class="main-header__item">
+      <!-- <li class="main-header__item">
         <a
           href="/admin/add-product"
           class="<%= path === '/admin/add-product' ? 'active' : '' %>"
@@ -29,6 +29,13 @@
           href="/admin/products"
           class="<%= path === '/admin/products' ? 'active' : '' %>"
           >Admin Product</a
+        >
+      </li> -->
+    </ul>
+    <ul class="main-header__item-list">
+      <li class="main-header__item">
+        <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
+          >Login</a
         >
       </li>
     </ul>
