--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -17,7 +17,8 @@
           >Orders</a
         >
       </li>
-      <!-- <li class="main-header__item">
+      <% if(isAuthenticated){ %>
+      <li class="main-header__item">
         <a
           href="/admin/add-product"
           class="<%= path === '/admin/add-product' ? 'active' : '' %>"
@@ -30,7 +31,8 @@
           class="<%= path === '/admin/products' ? 'active' : '' %>"
           >Admin Product</a
         >
-      </li> -->
+      </li>
+      <% } %>
     </ul>
     <ul class="main-header__item-list">
       <li class="main-header__item">
