--- a/views/includes/navigation.ejs
+++ b/views/includes/navigation.ejs
@@ -9,6 +9,7 @@
           >Products</a
         >
       </li>
+      <% if(isAuthenticated){ %>
       <li class="main-header__item">
         <a class="<%= path === '/cart' ? 'active' : '' %>" href="/cart">Cart</a>
       </li>
@@ -17,7 +18,7 @@
           >Orders</a
         >
       </li>
-      <% if(isAuthenticated){ %>
+
       <li class="main-header__item">
         <a
           href="/admin/add-product"
@@ -35,16 +36,19 @@
       <% } %>
     </ul>
     <ul class="main-header__item-list">
+      <% if(!isAuthenticated){ %>
       <li class="main-header__item">
         <a class="<%= path === '/login' ? 'active' : '' %>" href="/login"
           >Login</a
         >
       </li>
+      <% }else { %>
       <li class="main-header__item">
         <form action="/logout" method="POST">
           <button type="submit">Logout</button>
         </form>
       </li>
+      <% } %>
     </ul>
   </nav>
 </header>
