--- a/views/shop/index.ejs
+++ b/views/shop/index.ejs
@@ -27,7 +27,9 @@
             </p>
           </div>
           <div class="card__actions">
-            <%- include('../includes/add-to-cart',{product:product})%>
+            <% if(isAuthenticated){%>
+              <%- include('../includes/add-to-cart.ejs',{ product:product})%>
+            <% } %>
           </div>
         </article>
         <% }) %>
