--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -16,9 +16,13 @@
           <label for="imageUrl">Password</label>
           <input type="password" name="password" id="password" />
         </div>
+        <div class="form-control">
+          <label for="imageUrl">Confirm Password</label>
+          <input type="password" name="confirmPassword" id="confirmPassword" />
+        </div>
 
 
-        <button type="submit">Login</button>
+        <button type="submit">Sigup</button>
       </form>
     </main>
 <%- include('../includes/end.ejs')%>
