--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -21,7 +21,7 @@
           <input type="password" name="confirmPassword" id="confirmPassword" />
         </div>
 
-
+        <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
         <button type="submit">Sigup</button>
       </form>
     </main>
