--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -27,6 +27,7 @@
         <% if(editing) {  %>
           <input type="hidden" name="productId" value="<%= product._id %>" />
         <% } %>
+        <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
         <button type="submit"><% if (editing) { %>Updating Product<%} else {%>Add Product<%}%></button>
       </form>
     </main>
