--- a/views/shop/cart.ejs
+++ b/views/shop/cart.ejs
@@ -20,7 +20,7 @@
                     <% }) %>
                 </ul>
                 <form action="/create-order" method="POST">
-                    
+                    <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
                     <button class="btn" type="submit">Order Now!</button>
                 </form>
             <% } else { %>
