--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -5,8 +5,11 @@
 
   <body>
     <%- include('../includes/navigation.ejs') %>
-
+    
     <main>
+      <% if(errorMessage){%>
+        <div><%= errorMessage %></div>
+      <% }%>
       <form class="login-form" action="/login" method="POST">
         <div class="form-control">
           <label for="title">Email</label>
