--- a/public/css/main.css
+++ b/public/css/main.css
@@ -206,6 +206,18 @@ form {
   color: white;
 }
 
+.user-message {
+  margin: auto;
+  width: 90%;
+  border: 1px solid #4771fa;
+  border-radius: 3px;
+  text-align: center;
+}
+.user-message--error {
+  border: 1px solid red;
+  background-color: rgb(255, 176, 176);
+}
+
 @media (min-width: 768px) {
   .main-header__nav {
     display: flex;
