--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -7,10 +7,11 @@
     <%- include('../includes/navigation.ejs') %>
     
     <main>
-      <% if(errorMessage){%>
-        <div><%= errorMessage %></div>
-      <% }%>
+      
       <form class="login-form" action="/login" method="POST">
+        <% if(errorMessage){%>
+          <div class="user-message user-message--error"><%= errorMessage %></div>
+        <% }%>
         <div class="form-control">
           <label for="title">Email</label>
           <input type="text" name="email" id="email" />
