--- a/public/css/main.css
+++ b/public/css/main.css
@@ -208,7 +208,7 @@ form {
 
 .user-message {
   margin: auto;
-  width: 90%;
+  width: 25rem;
   border: 1px solid #4771fa;
   border-radius: 3px;
   text-align: center;
