--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -17,6 +17,10 @@
   border-radius: 2px;
 }
 
+.form-control input.invalid {
+  border-color: red;
+}
+
 .form-control input:focus,
 .form-control textarea:focus {
   outline-color: #00695c;
