--- a/views/auth/signup.ejs
+++ b/views/auth/signup.ejs
@@ -13,15 +13,15 @@
       <form class="login-form" action="/signup" method="POST">
         <div class="form-control">
           <label for="title">Email</label>
-          <input type="text" name="email" id="email" value="<%= oldInput.email%>"/>
+          <input class="<%= validationErrors.find(p => p.param === 'email') ? 'invalid' : ''%>" type="text" name="email" id="email" value="<%= oldInput.email%>"/>
         </div>
         <div class="form-control">
           <label for="imageUrl">Password</label>
-          <input type="password" name="password" id="password" value="<%= oldInput.password%>" />
+          <input class="<%= validationErrors.find(p => p.param === 'password') ? 'invalid' : ''%>" type="password" name="password" id="password" value="<%= oldInput.password%>" />
         </div>
         <div class="form-control">
           <label for="imageUrl">Confirm Password</label>
-          <input type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword%>"/>
+          <input class="<%= validationErrors.find(p => p.param === 'confirmPassword') ? 'invalid' : ''%>" type="password" name="confirmPassword" id="confirmPassword" value="<%= oldInput.confirmPassword%>"/>
         </div>
 
         <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
