--- a/views/auth/login.ejs
+++ b/views/auth/login.ejs
@@ -14,11 +14,11 @@
         
         <div class="form-control">
           <label for="title">Email</label>
-          <input type="text" name="email" id="email" />
+          <input class="<% validationErrors.find(e => e.param ==='email') ? 'invalid' :''%>" type="text" name="email" id="email" value="<%= oldInput.email%>"/>
         </div>
         <div class="form-control">
           <label for="imageUrl">Password</label>
-          <input type="password" name="password" id="password" />
+          <input class="<% validationErrors.find(e => e.param ==='password') ? 'invalid' :''%>" type="password" name="password" id="password" value="<%= oldInput.password%>"/>
         </div>
         <input type="hidden" name="_csrf" value="<%= csrfToken%>" />
         <button type="submit">Login</button>
