--- a/public/css/forms.css
+++ b/public/css/forms.css
@@ -17,7 +17,8 @@
   border-radius: 2px;
 }
 
-.form-control input.invalid {
+.form-control input.invalid,
+.form-control textarea.invalid {
   border-color: red;
 }
 
