--- a/views/admin/edit-product.ejs
+++ b/views/admin/edit-product.ejs
@@ -16,8 +16,8 @@
           <input class="<%= validationErrors.find(e => e.param ==='title') ? 'invalid' :''%>" type="text" name="title" id="title" value="<% if(editing|| hasError) {%><%= product.title%><%}%>" />
         </div>
         <div class="form-control">
-          <label for="imageUrl">Image Url</label>
-          <input class="<%= validationErrors.find(e => e.param ==='imageUrl') ? 'invalid' :''%>" type="text" name="imageUrl" id="imageUrl" value="<% if(editing|| hasError) {%><%= product.imageUrl%><%}%>"/>
+          <label for="image">Image Url</label>
+          <input  type="file" name="image" id="image" />
         </div>
         <div class="form-control">
           <label for="price">Price</label>
