--- a/views/shop/orders.ejs
+++ b/views/shop/orders.ejs
@@ -13,7 +13,7 @@
               <ul>
                 <% order.products.forEach(product =>{%>
                 
-                <li><%= product.product.title%>(<%= product.quantity%>)
+                <li><%= product.product.title%>(<%= product.quantity%>) - <a href="/orders/<%= order._id%>">Invoice</a>
                 </li>
                 <% })%>
               </ul>
